<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginTop="40dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="用户名"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_14" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginBottom="10dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密    码："
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_login_btn"
        android:clickable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@color/btn_text_color"
        android:textSize="@dimen/text_size_18" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/registerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/hint_color_1"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/findPwdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/find_password"
            android:textColor="@color/hint_color_1"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

</LinearLayout>